# notebooklm

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: MobileSidebar.tsx  MobileTabs.tsx  Sidebar.tsx
src/components/kb/: ChatArea.tsx  DocumentsPanel.tsx  SettingsPanel.tsx  UploadZone.tsx  index.ts
src/db/: database.ts  index.ts
src/i18n/: en.ts  index.tsx  zh.ts
src/lib/: chat.ts  documents.ts  embedding.ts  index.ts  sessions.ts  web-search.ts
src/pages/: Home.tsx  KBDetail.tsx  Layout.tsx
src/stores/: index.ts
