[package]
name = "notebooklm"
version = "1.0.0"
description = "本地AI知识库 - 桌面应用"
authors = []
edition = "2021"

[lib]
name = "notebooklm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
